tests/lean/1011.lean.expected.out
1011.lean:6:11-6:13: error: unknown identifier 'AA'
