tests/lean/1011.lean
def f (x : A) := x

set_option relaxedAutoImplicit false

def g (x : A) := x
def h (x : AA) := x
def i (x : A1) := x
def j (x : A₁) := x
def k (x : A') := x
